--- a/src/config/locale/messages/en/pages/photo-effects.json
+++ b/src/config/locale/messages/en/pages/photo-effects.json
@@ -43,7 +43,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/ai-muscle-photo?type=360 肌肉展示"
+                "url": "/photo-effects/ai-muscle-photo?type=360 Muscle Showcase"
               },
               {
                 "id": "ai-dance-generator-肚皮舞",
@@ -58,7 +58,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/video-effects/ai-dance?type=肚皮舞"
+                "url": "/video-effects/ai-dance?type=Belly Dance"
               },
               {
                 "id": "ai-fake-date-中国女友",
@@ -73,7 +73,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/ai-fake-date-photo?type=中国女友"
+                "url": "/photo-effects/ai-fake-date-photo?type=Chinese Girlfriend"
               },
               {
                 "id": "ai-fake-date-俄罗斯女友",
@@ -88,7 +88,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/ai-fake-date-photo?type=俄罗斯女友"
+                "url": "/photo-effects/ai-fake-date-photo?type=Russian Girlfriend"
               },
               {
                 "id": "ai-fake-date-印度女友",
@@ -103,7 +103,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/ai-fake-date-photo?type=印度女友"
+                "url": "/photo-effects/ai-fake-date-photo?type=Indian Girlfriend"
               },
               {
                 "id": "ai-fake-date-女友约会",
@@ -118,7 +118,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/ai-fake-date-photo?type=女友约会"
+                "url": "/photo-effects/ai-fake-date-photo?type=Girlfriend Date"
               },
               {
                 "id": "ai-fake-date-日本女友",
@@ -133,7 +133,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/ai-fake-date-photo?type=日本女友"
+                "url": "/photo-effects/ai-fake-date-photo?type=Japanese Girlfriend"
               },
               {
                 "id": "ai-fake-date-法国女友",
@@ -148,7 +148,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/ai-fake-date-photo?type=法国女友"
+                "url": "/photo-effects/ai-fake-date-photo?type=French Girlfriend"
               },
               {
                 "id": "ai-fake-date-美国女友",
@@ -163,7 +163,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/ai-fake-date-photo?type=美国女友"
+                "url": "/photo-effects/ai-fake-date-photo?type=American Girlfriend"
               },
               {
                 "id": "ai-kissing-咬嘴唇之吻",
@@ -178,7 +178,7 @@
                 },
                 "badge": "HOT",
                 "count": "50K",
-                "url": "/photo-effects/ai-kissing-photo?type=咬嘴唇之吻"
+                "url": "/photo-effects/ai-kissing-photo?type=Biting Lip Kiss"
               },
               {
                 "id": "ai-kissing-正常接吻",
@@ -193,7 +193,7 @@
                 },
                 "badge": "HOT",
                 "count": "50K",
-                "url": "/photo-effects/ai-kissing-photo?type=正常接吻"
+                "url": "/photo-effects/ai-kissing-photo?type=Normal Kiss"
               },
               {
                 "id": "ai-kissing-法式接吻",
@@ -208,7 +208,7 @@
                 },
                 "badge": "HOT",
                 "count": "50K",
-                "url": "/photo-effects/ai-kissing-photo?type=法式接吻"
+                "url": "/photo-effects/ai-kissing-photo?type=French Kiss"
               },
               {
                 "id": "ai-kissing-脸颊之吻",
@@ -223,7 +223,7 @@
                 },
                 "badge": "HOT",
                 "count": "50K",
-                "url": "/photo-effects/ai-kissing-photo?type=脸颊之吻"
+                "url": "/photo-effects/ai-kissing-photo?type=Cheek Kiss"
               },
               {
                 "id": "ai-kissing-额头之吻",
@@ -238,7 +238,7 @@
                 },
                 "badge": "HOT",
                 "count": "50K",
-                "url": "/photo-effects/ai-kissing-photo?type=额头之吻"
+                "url": "/photo-effects/ai-kissing-photo?type=Forehead Kiss"
               },
               {
                 "id": "ai-selfie-with-celebrities-名人合拍",
@@ -253,7 +253,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/ai-celebrity-selfie?type=名人合拍"
+                "url": "/photo-effects/ai-celebrity-selfie?type=Celebrity Selfie"
               },
               {
                 "id": "hug-侧身依抱",
@@ -268,7 +268,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/hug-generator?type=侧身依抱"
+                "url": "/photo-effects/hug-generator?type=Side Hug"
               },
               {
                 "id": "hug-公主抱",
@@ -283,7 +283,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/hug-generator?type=公主抱"
+                "url": "/photo-effects/hug-generator?type=Princess Hug"
               },
               {
                 "id": "hug-托举式抱",
@@ -298,7 +298,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/hug-generator?type=托举式抱"
+                "url": "/photo-effects/hug-generator?type=Lift Hug"
               },
               {
                 "id": "hug-拥抱",
@@ -313,7 +313,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/hug-generator?type=拥抱"
+                "url": "/photo-effects/hug-generator?type=Hug"
               },
               {
                 "id": "hug-背后环抱",
@@ -328,7 +328,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/hug-generator?type=背后环抱"
+                "url": "/photo-effects/hug-generator?type=Back Hug"
               },
               {
                 "id": "jiggle-抖动身体",
@@ -343,7 +343,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/video-effects/ai-jiggle?type=抖动身体"
+                "url": "/video-effects/ai-jiggle?type=Body Jiggle"
               },
               {
                 "id": "muscle-肌肉展示",
@@ -358,7 +358,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/ai-muscle-photo?type=肌肉展示"
+                "url": "/photo-effects/ai-muscle-photo?type=Muscle Showcase"
               },
               {
                 "id": "pregnant-ai-怀孕",
@@ -373,7 +373,7 @@
                 },
                 "badge": "HOT",
                 "count": "50K",
-                "url": "/photo-effects/ai-pregnant-photo?type=怀孕"
+                "url": "/photo-effects/ai-pregnant-photo?type=Pregnant"
               },
               {
                 "id": "模仿-ai站立一字马",
@@ -388,7 +388,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/video-effects/ai-mimic?type=AI 站立一字马"
+                "url": "/video-effects/ai-mimic?type=AI Standing Split"
               },
               {
                 "id": "模仿-reze舞",
@@ -403,7 +403,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/video-effects/ai-mimic?type=Reze 舞"
+                "url": "/video-effects/ai-mimic?type=Reze Dance"
               },
               {
                 "id": "模仿-叉腰扭臂",
@@ -418,7 +418,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/video-effects/ai-mimic?type=叉腰扭臂"
+                "url": "/video-effects/ai-mimic?type=Waist Twist"
               },
               {
                 "id": "模仿-扭臀舞",
@@ -433,7 +433,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/video-effects/ai-mimic?type=扭臀舞"
+                "url": "/video-effects/ai-mimic?type=Twerk Dance"
               },
               {
                 "id": "模仿-热辣钢管舞",
@@ -448,7 +448,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/video-effects/ai-mimic?type=热辣钢管舞"
+                "url": "/video-effects/ai-mimic?type=Pole Dance"
               },
               {
                 "id": "模仿-电摇舞",
@@ -463,7 +463,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/video-effects/ai-mimic?type=电摇舞"
+                "url": "/video-effects/ai-mimic?type=Electric Dance"
               },
               {
                 "id": "模仿-香奈儿舞",
@@ -478,7 +478,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/video-effects/ai-mimic?type=香奈儿舞"
+                "url": "/video-effects/ai-mimic?type=Chanel Dance"
               },
               {
                 "id": "艺术-ai局部留色视频特效",
@@ -493,7 +493,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/art-style?type=AI 局部留色"
+                "url": "/photo-effects/art-style?type=AI Color Splash"
               },
               {
                 "id": "艺术-ai御龙飞行视频",
@@ -508,7 +508,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/art-style?type=AI 御龙飞行"
+                "url": "/photo-effects/art-style?type=AI Dragon Flight"
               },
               {
                 "id": "艺术-冰雕",
@@ -523,7 +523,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/art-style?type=冰雕"
+                "url": "/photo-effects/art-style?type=Ice Sculpture"
               },
               {
                 "id": "视觉效果-ai爆炸效果",
@@ -538,7 +538,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/ai-visual-effects-photo?type=AI 爆炸效果"
+                "url": "/photo-effects/ai-visual-effects-photo?type=AI Explosion"
               },
               {
                 "id": "视觉效果-史诗级爆炸漫步",
@@ -553,7 +553,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/ai-visual-effects-photo?type=史诗级爆炸漫步"
+                "url": "/photo-effects/ai-visual-effects-photo?type=Epic Explosion Walk"
               },
               {
                 "id": "视觉效果-改变直升机机库",
@@ -568,7 +568,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/ai-visual-effects-photo?type=改变直升机机库"
+                "url": "/photo-effects/ai-visual-effects-photo?type=Change Helicopter Hangar"
               },
               {
                 "id": "视觉效果-海洋连衣裙",
@@ -583,7 +583,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/ai-visual-effects-photo?type=海洋连衣裙"
+                "url": "/photo-effects/ai-visual-effects-photo?type=Ocean Dress"
               },
               {
                 "id": "视觉效果-穿越维度",
@@ -598,7 +598,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/ai-visual-effects-photo?type=穿越维度"
+                "url": "/photo-effects/ai-visual-effects-photo?type=Dimension Travel"
               },
               {
                 "id": "视觉效果-进入嘴巴",
@@ -613,7 +613,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/ai-visual-effects-photo?type=进入嘴巴"
+                "url": "/photo-effects/ai-visual-effects-photo?type=Into Mouth"
               },
               {
                 "id": "角色切换-ai老虎拥抱",
@@ -628,7 +628,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/ai-role-swap-photo?type=AI 老虎拥抱"
+                "url": "/photo-effects/ai-role-swap-photo?type=AI Tiger Hug"
               },
               {
                 "id": "角色切换-坐上豪车",
@@ -643,7 +643,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/ai-role-swap-photo?type=坐上豪车"
+                "url": "/photo-effects/ai-role-swap-photo?type=Luxury Car"
               },
               {
                 "id": "角色切换-审讯室",
@@ -658,7 +658,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/ai-role-swap-photo?type=审讯室"
+                "url": "/photo-effects/ai-role-swap-photo?type=Interrogation Room"
               },
               {
                 "id": "角色切换-尖叫",
@@ -673,7 +673,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/ai-role-swap-photo?type=尖叫"
+                "url": "/photo-effects/ai-role-swap-photo?type=Scream"
               },
               {
                 "id": "角色切换-遇见未来的小孩",
@@ -688,7 +688,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/ai-role-swap-photo?type=遇见未来的小孩"
+                "url": "/photo-effects/ai-role-swap-photo?type=Meet Future Kid"
               },
               {
                 "id": "角色切换-遇见老年的我",
@@ -703,7 +703,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/ai-role-swap-photo?type=遇见老年的我"
+                "url": "/photo-effects/ai-role-swap-photo?type=Meet Older Me"
               },
               {
                 "id": "角色切换-雨中漫步",
@@ -718,7 +718,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/ai-role-swap-photo?type=雨中漫步"
+                "url": "/photo-effects/ai-role-swap-photo?type=Rain Walk"
               },
               {
                 "id": "角色切换-雨夜",
@@ -733,7 +733,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/ai-role-swap-photo?type=雨夜"
+                "url": "/photo-effects/ai-role-swap-photo?type=Rainy Night"
               }
             ]
           },
@@ -754,7 +754,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/ai-muscle-photo?type=360 肌肉展示"
+                "url": "/photo-effects/ai-muscle-photo?type=360 Muscle Showcase"
               }
             ]
           },
@@ -775,7 +775,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/video-effects/ai-dance?type=肚皮舞"
+                "url": "/video-effects/ai-dance?type=Belly Dance"
               }
             ]
           },
@@ -796,7 +796,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/ai-fake-date-photo?type=中国女友"
+                "url": "/photo-effects/ai-fake-date-photo?type=Chinese Girlfriend"
               },
               {
                 "id": "ai-fake-date-俄罗斯女友",
@@ -811,7 +811,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/ai-fake-date-photo?type=俄罗斯女友"
+                "url": "/photo-effects/ai-fake-date-photo?type=Russian Girlfriend"
               },
               {
                 "id": "ai-fake-date-印度女友",
@@ -826,7 +826,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/ai-fake-date-photo?type=印度女友"
+                "url": "/photo-effects/ai-fake-date-photo?type=Indian Girlfriend"
               },
               {
                 "id": "ai-fake-date-女友约会",
@@ -841,7 +841,7 @@
                 },
                 "badge": null,
                 "count": "50K",
-                "url": "/photo-effects/ai-fake-date-photo?type=女友约会"
+                "url": "/photo-effects/ai-fake-date-photo?type=Girlfriend Date"
               },
               {
                 "id": "ai-fake-date-日本女友",
